kubernetes/mongo-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: recipe-app
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: recipe-app
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
          - containerPort: 27017
        command:
          - mongod
          - "--replSet"
          - rs0
          - "--bind_ip_all"
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
